--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
     </section>
 
     <!-- HINT -->
-    <div class="hint" id="hint">Pas besoin d'essayer de cliquer sur non</div>
+    <div class="hint" id="hint">Tu peux essayer de cliquer sur non.. si t'y arrives</div>
 
     <section class="result" id="result">
-      <h2>YAY! 🎉</h2>
+      <h2>Je savais que t'allais dire oui !!😍🫶🏻</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
+        src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDlnc28zM213Nml2eGNmbGswb3Zsd2pqNm10NDJ6bjA2eW9ocnpieiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/EuUh39fgaw7Ipg3ZZC/giphy.gif"
         alt="Fireworks"
       />
     </section>
@@ -301,3 +301,4 @@
 </body>
 
 </html>
+
