--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
     <!-- HINT -->
-    <div class="hint" id="hint">Tu peux essayer de cliquer sur non.. si t'y arrives</div>
+    <div class="hint" id="hint">Tu peux essayer de cliquer sur non.. si t'y arrives 👀</div>
 
     <section class="result" id="result">
       <h2>Je savais que t'allais dire oui !!😍🫶🏻</h2>
@@ -301,5 +301,6 @@
 </body>
 
 </html>
+
 
 
