Add Google Form iframe to result section
Added an iframe to the result section for a Google Form.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
         class="fireworks"
         src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWMzbXY2bHBkeTZ4dnpzNGc2OWxpNXFrbGlwaGd4NmprcGd3bWFkYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CVg1ByN0k7JXcqqiDC/giphy.gif"
         alt="Fireworks"
-      />
+      />    
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdr1eSQM90yq8ux9Z7laPPVF-b7ojhhzESsruUDhKBEBCgW2Q/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
     </section>
   </main>
 
