Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <section class="result" id="result">
       <h2>Je savais que t'allais dire oui !!😍🫶🏻</h2>
-      <button id="formBtn" style="margin: 20px; background: var(--yes); color: #fff; position: static; transform: none;">Entrer dans notre bulle</button>
+      <button id="formBtn" style="margin: 20px; background: var(--yes); color: #fff; position: static; transform: none;">Aller plus loin</button>
       <img
         class="fireworks"
         src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWMzbXY2bHBkeTZ4dnpzNGc2OWxpNXFrbGlwaGd4NmprcGd3bWFkYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CVg1ByN0k7JXcqqiDC/giphy.gif"
@@ -317,3 +317,4 @@
 </body>
 
 </html>
+
